api, presenters and hawk (about is coming)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_teste">TesteActivity</string>
     <string name="searchbar_hint">Pesquisar…</string>
     <string name="action_search">Pesquisar</string>
+    <string name="action_about">About</string>
 </resources>
