activitys to fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,13 @@
 <resources>
     <string name="app_name">Movies</string>
-    <string name="welcome">Procure um ou mais filmes utilizando a barra de pesquisa acima.</string>
-    <string name="movie_list_empty">A busca retornou nenhum resultado.</string>
+    <string name="movie_list_empty">Lista de Filmes vazia.</string>
     <string name="title_activity_teste">TesteActivity</string>
     <string name="searchbar_hint">Pesquisar…</string>
     <string name="action_search">Pesquisar</string>
     <string name="action_about">About</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="search_success">Pesquisa concluída</string>
+    <string name="about">Sobre</string>
 </resources>
