--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,10 @@
     <string name="searchbar_hint">Pesquisar…</string>
     <string name="action_search">Pesquisar</string>
     <string name="action_about">About</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="search_success">Pesquisa concluída</string>
     <string name="about">Sobre</string>
+    <string name="hint_genre">Genre:</string>
+    <string name="hint_plot">Plot:</string>
+    <string name="year">Year</string>
+    <string name="director">Director</string>
 </resources>
