--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,17 @@
 <resources>
     <string name="app_name">Movies</string>
-    <string name="movie_list_empty">Lista de Filmes vazia.</string>
-    <string name="title_activity_teste">TesteActivity</string>
-    <string name="searchbar_hint">Pesquisar…</string>
-    <string name="action_search">Pesquisar</string>
+    <string name="movie_list_empty">Movie list empty.</string>
+    <string name="searchbar_hint">Search…</string>
+    <string name="action_search">Search</string>
     <string name="action_about">About</string>
-    <string name="search_success">Pesquisa concluída</string>
-    <string name="about">Sobre</string>
+    <string name="search_success">Completed search with success.</string>
+    <string name="about">About</string>
     <string name="hint_genre">Genre:</string>
     <string name="hint_plot">Plot:</string>
     <string name="year">Year</string>
     <string name="director">Director</string>
+    <string name="hint_rated">Rated:</string>
+    <string name="writer">Writer</string>
+    <string name="delete">Delete</string>
+    <string name="delete_suggestion">Remove from search history?</string>
 </resources>
