--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,14 @@
     <string name="writer">Writer</string>
     <string name="delete">Delete</string>
     <string name="delete_suggestion">Remove from search history?</string>
+    <string name="tutorial_search_title">Search Movies</string>
+    <string name="tutorial_search_description">You can search movies from IMDb touching here!</string>
+    <string name="tutorial_about_title">About App</string>
+    <string name="tutorial_about_description">Tap here to see informations about this App and the libraries used.</string>
+    <string name="tutorial_list_title">List of Movies</string>
+    <string name="tutorial_list_description">All your search movies will appear here in list form.</string>
+    <string-array name="libraries">
+        <item>icons</item>
+        <item>taptargetview</item>
+    </string-array>
 </resources>
