--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="tutorial_about_title">About App</string>
     <string name="tutorial_about_description">Tap here to see informations about this App and the libraries used.</string>
     <string name="tutorial_list_title">List of Movies</string>
-    <string name="tutorial_list_description">All your search movies will appear here in list form.</string>
+    <string name="tutorial_list_description">All your search movies will appear here in list form.\nTap one to see more details.</string>
     <string-array name="libraries">
         <item>icons</item>
         <item>taptargetview</item>
