--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,6 @@
     <string name="retry">Retry</string>
     <string name="welcome_message">Welcome! Make a search.</string>
     <string name="search_success">Completed search with success.</string>
-    <string name="about">About</string>
     <string name="hint_genre">Genre:</string>
     <string name="hint_plot">Plot:</string>
     <string name="year">Year</string>
@@ -23,6 +22,8 @@
     <string name="tutorial_about_description">Tap here to see informations about this App and the libraries used.</string>
     <string name="tutorial_list_title">List of Movies</string>
     <string name="tutorial_list_description">All your search movies will appear here in list form.\nTap one to see more details.</string>
+    <string name="about_title">About</string>
+    <string name="about_description">Description</string>
     <string-array name="libraries">
         <item>icons</item>
         <item>taptargetview</item>
